# ChangeLog for dev-ruby/extensions
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/extensions/ChangeLog,v 1.9 2010/06/21 05:20:38 graaff Exp $

*extensions-0.6.0-r1 (21 Jun 2010)

  21 Jun 2010; Hans de Graaff <graaff@gentoo.org>
  +extensions-0.6.0-r1.ebuild:
  Convert to ruby-fakegem.

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  extensions-0.6.0.ebuild:
  Various cleanups.

  25 Jun 2008; Dawid Węgliński <cla@gentoo.org> extensions-0.6.0.ebuild:
  Add ~amd64 (bug #228339)

  13 Oct 2007; Tom Gall <tgall@gentoo.org> extensions-0.6.0.ebuild:
  stable on ppc64

  09 Mar 2007; Tom Gall <tgall@gentoo.org> extensions-0.6.0.ebuild:
  added ~ppc64

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> extensions-0.6.0.ebuild:
  Mark 0.6.0 stable on ia64

  17 Apr 2006; Caleb Tennis <caleb@gentoo.org> extensions-0.6.0.ebuild:
  x86 stable

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> extensions-0.6.0.ebuild:
  Mark 0.6.0 ~ia64

*extensions-0.6.0 (04 Nov 2005)

  04 Nov 2005; Caleb Tennis <caleb@gentoo.org> +metadata.xml,
  +extensions-0.6.0.ebuild:
  Initial import
